# onioncry

./: .coderabbit.yaml  .gitignore  .secondbrain-export  .secondbrain-project  .tabularium-export  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  cog.toml  skills-lock.json
.claude/skills/: archive-spec  clap-rust  cut-release  onioncry  qa-gate  setup-workflow  write-idea  write-tasks  write-techspec
.github/: CODEOWNERS
.github/workflows/: ci-conventions.yml  conventions.yml  release-crates.yml
.scratch/05-cli-introspection/: PRD.md
.scratch/06-violation-baseline/: PRD.md
.scratch/07-onboarding-friction/: PRD.md
.scratch/08-integration-and-reach/: PRD.md
.scratch/architecture-modes/: PRD.md
.scratch/code-organization-rules/: PRD.md
.scratch/onioncry-mvp/: HANDOFF.md
docs/: architecture-modes.md  release.md
docs/_refacs/: 20260703-post-split-refactoring-analysis.md  20260703-rule-module-refactor-plan.md
docs/adr/: 0001-use-infra-as-the-default-outer-layer.md  0002-use-jsonc-for-configuration.md  0003-use-linter-style-configuration.md  0004-use-oxc-parser-for-javascript-and-typescript.md  0005-delegate-generic-javascript-smells-to-javascript-linters.md  0006-add-code-organization-rules.md  0010-add-a-violation-baseline.md  (+4 more)
npm/: README.md  package.json
scripts/: check-conventional-commits.sh  check-conventional-title.sh
src/: baseline.rs  classification.rs  commands.rs  config.rs  diagnostics.rs  errors.rs  graph.rs  imports.rs  lib.rs  main.rs  model.rs  path_utils.rs  policy.rs  render.rs  suppressions.rs  tsconfig.rs
tests/: check_cli.rs  clean_architecture.rs  cli_check.rs  cli_check_scope.rs  cli_graph.rs  cli_init.rs  cli_rules.rs  cli_sarif.rs  cli_schema.rs  cli_suppressions.rs  code_smells.rs  explain.rs  feature_system.rs  repo_rules.rs  vertical_slice.rs
(+123 files in other folders)
